--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "materialize": "^0.98.0",
     "d3": "^4.7.0",
     "animate.css": "^3.5.2",
-    "fullpage.js": "^2.9.2"
+    "fullpage.js": "^2.9.2",
+    "textillate": "^0.4.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
