--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,11 @@
     "d3": "^4.7.0",
     "animate.css": "^3.5.2",
     "fullpage.js": "^2.9.2",
-    "textillate": "^0.4.0"
+    "textillate": "^0.4.0",
+    "d3-transform": "^1.0.4",
+    "cafej": "*",
+    "microplugin": "^0.0.3",
+    "bubble-chart": "*"
   },
   "devDependencies": {
     "chai": "^3.5.0",
